--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <main>
-        <section id="Login">
+        <section id="login">
             <div id="imagem">
-                foto
             </div>
+            
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
