--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <span class="material-symbols-outlined">
+                        <i class="material-symbols-outlined">
                             login
-                            </span>
+                            </i>
                         <input type="email" id="login" name="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <span class="material-symbols-outlined">
+                        <i class="material-symbols-outlined">
                             passkey
-                            </span>
+                            </i>
                         <input type="password" id="senha" name="senha" id="isenha"placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
